# quantor

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  changelog.md  readme.md
fnmeta/: Cargo.toml
fnmeta/src/: lib.rs
src/: error.rs  lib.rs  prelude.rs  quantor_ext.rs
src/macros/: assertions.rs  debug.rs  mod.rs  quantify.rs  select.rs
src/quantifiers/: basic.rs  mod.rs  nested.rs  selection.rs  structured.rs
