[package]
name = "quantor"
description = "Declarative quantifiers for filtering, validation, and testing in Rust."
keywords = ["logic", "validation", "math", "quantifiers"]
categories = ["algorithms", "data-structures", "mathematics", "development-tools::testing"]
repository = "https://github.com/nervousnullptr/quantor"
version = "0.9.0"
edition = "2021"
readme = "readme.md"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "README.md", "LICENSE*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
debug-tools = []
method-api = []

[workspace]
members = ["fnmeta"]